--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -233,3 +233,10 @@
  STRATEGICREGION_232:0 "East Phagosian Sea"
  STRATEGICREGION_233:0 "North Phagosian Sea"
  STRATEGICREGION_234:0 "South Phagosian Sea"
+ STRATEGICREGION_235:0 "East Sea of Pearls"
+ STRATEGICREGION_236:0 "West Sea of Pearls"
+ STRATEGICREGION_237:0 "Kazani Sea"
+ STRATEGICREGION_238:0 "Askonia"
+ STRATEGICREGION_239:0 "West Sea of Pearls"
+ STRATEGICREGION_240:0 "Aldan Channel"
+ STRATEGICREGION_241:0 "Friholm Bay"
