--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -80,7 +80,7 @@
  CON_DEF:0 "Consau"
  CON_ADJ:0 "Consau"
 
- FRO_fascism:0 "Imperial Serev-Valdic Union"
+FRO_fascism:0 "Imperial Serev-Valdic Union"
  FRO_fascism_DEF:0 "the Imperial Serev-Valdic Union”
  FRO_democratic:0 "Second Grand Sørligste Federation”
  FRO_democratic_DEF:0 "the Second Grand Sørligste Federation"
@@ -256,18 +256,18 @@
  AEZ_DEF:0 "Aezenfjord"
  AEZ_ADJ:0 "Aezenfjord"
 
- AVE_fascism:0 "Avertican Technocratic State"
- AVE_fascism_DEF:0 "the Avertican Technocratic State"
- AVE_democratic:0 "Republic of Avertico"
- AVE_democratic_DEF:0 "the Republic of Avertico"
- AVE_neutrality:1 "State of Avertico"
- AVE_neutrality_DEF:1 "the State of Avertico"
+ AVE_fascism:0 "Empire of Avertico"
+ AVE_fascism_DEF:0 "the Empire of Avertico"
+ AVE_democratic:0 "Avertican Technocratic State"
+ AVE_democratic_DEF:0 "the Avertican Technocratic State"
+ AVE_neutrality:1 "Kingdom of Avertico"
+ AVE_neutrality_DEF:1 "the Kingdom of Avertico"
  AVE_communism:0 "Socialist Republic of Avertico"
  AVE_communism_DEF:0 "the Socialist Republic of Avertico"
- AVE_fascism_ADJ:0 "Avertican"
- AVE_democratic_ADJ:0 "Avertican"
- AVE_neutrality_ADJ:0 "Avertican"
- AVE_communism_ADJ:0 "Avertican"
+ AVE_fascism_ADJ:0 "Avertician"
+ AVE_democratic_ADJ:0 "Avertician"
+ AVE_neutrality_ADJ:0 "Avertician"
+ AVE_communism_ADJ:0 "Avertician"
  AVE:0 "Avertico"
  AVE_DEF:0 "Avertico"
  AVE_ADJ:0 "Avertico"
@@ -1369,7 +1369,7 @@
  POL_democratic:0 "Republican Polikòs"
  POL_democratic_DEF:0 "The Republic of Polikòs"
  POL_neurality:1 "Polikòs"
- POL_neutrality_DEF:1 "the Polikòs State"
+ POL_neutrality_DEF:1 "the Polikòs City state"
  POL_communism:0 "Polikòs Socialist Democracy"
  POL_communism_DEF:0 "the Socialist Democracy of Polikòs"
  POL_fascism_ADJ:0 "Polikòsi"
@@ -1380,8 +1380,8 @@
  POL_DEF:0 "Polikòs"
  POL_ADJ:0 "Polikòs"
 
- DLR_fascism:0 "Empire of Daelyria"
- DLR_facism_DEF:0 "the Empire of Daelyria"
+ DLR_fascism:0 "Empire of Mithra"
+ DLR_facism_DEF:0 "the Empire of Mithra"
  DLR_democratic:0 "Republic of Daelyria"
  DLR_democratic_DEF:0 "The Republic of Daelyria"
  DLR_neurality:1 "Second High Kingdom of Daelyria"
@@ -1396,18 +1396,18 @@
  DLR_DEF:0 "Daelyria"
  DLR_ADJ:0 "Daelyria"
 
- FST_fascism:0 "Frostview"
- FST_fascism_DEF:0 "the Frostview"
- FST_democratic:0 "Frostview"
- FST_democratic_DEF:0 "the Frostview"
- FST_neutrality:1 "Kingdom of Frostview"
- FST_neutrality_DEF:1 "the Kingdom of Frostview"
- FST_communism:0 "Frostview"
- FST_communism_DEF:0 "the Frostview"
- FST_fascism_ADJ:0 "Frostvians"
- FST_democratic_ADJ:0 "Frostvians"
- FST_neutrality_ADJ:0 "Frostvians"
- FST_communism_ADJ:0 "Frostvians"
- FST:0 "Frostview"
- FST_DEF:0 "Frostview"
- FST_ADJ:0 "Frostview"
+ CHA_fascism:0 "Empire of the Isle"
+ CHA_facism_DEF:0 "the Empire of the Isle"
+ CHA_democratic:0 "Republic of Korribian"
+ CHA_democratic_DEF:0 "The Republic of Korribian"
+ CHA_neurality:1 "Kingdom of Chanels"
+ CHA_neutrality_DEF:1 "the Kingdom of Chanels"
+ CHA_communism:0 "Socialist Korribian Isle"
+ CHA_communism_DEF:0 "the Socialist Korribian Isle"
+ CHA_fascism_ADJ:0 "Korribian"
+ CHA_democratic_ADJ:0 "Korribian"
+ CHA_neutrality_ADJ:0 "Korribian"
+ CHA_communism_ADJ:0 "Korribian"
+ CHA:0 "Chanels"
+ CHA_DEF:0 "Chanels"
+ CHA_ADJ:0 "Chanels"
