Tweaked DRK file added C flag for SIM

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1059,14 +1059,14 @@ FRO_fascism:0 "Imperial Serev-Valdic Union"
  SIM_DEF:0 "Simulami"
  SIM_ADJ:0 "Simulami" 
 
- DRK_fascism:0 "Großer Königreich Draakonien"
- DRK_fascism_DEF:0 "Großer Königreich Draakonien"
- DRK_democratic:0 "Drakonian Republic"
- DRK_democratic_DEF:0 "the Drakonian Republic"
+ DRK_fascism:0 "Draakonisches Astral Kaiserreich"
+ DRK_fascism_DEF:0 "Die Draakonisches Astral Kaiserreich"
+ DRK_democratic:0 "High Kingdom of Drakonia"
+ DRK_democratic_DEF:0 "the High Kingdom of Drakonia"
  DRK_neutrality:1 "Erz Königreich Draakonien"
  DRK_neutrality_DEF:1 "Erz Königreich Draakonien"
- DRK_communism:0 "Socialist state of Drakonia"
- DRK_communism_DEF:0 "the Socialist state of Drakonia"
+ DRK_communism:0 "United Monarcho-Socialist Kingdom of Draakonien"
+ DRK_communism_DEF:0 "the United Monarcho-Socialist Kingdom of Draakonien"
  DRK_fascism_ADJ:0 "Drakonian"
  DRK_democratic_ADJ:0 "Drakonian"
  DRK_neutrality_ADJ:0 "Drakonian"
