--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -5,6 +5,6 @@
  fascism:0 "Imperialist"
  fascism:0 "Imperialism"
  fascism_desc:0 "Imperialist Regime"
- Neutrality:0 "Monarchist"
- Neutrality:0 "Monarchism"
- Neutrality_desc:0 "Monarchist State"
+ neutrality:0 "Monarchist"
+ neutrality_noun:0 "Monarchism"
+ neutrality_desc:0 "Monarchist state"
