--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -256,18 +256,18 @@ FRO_fascism:0 "Imperial Serev-Valdic Union"
  AEZ_DEF:0 "Aezenfjord"
  AEZ_ADJ:0 "Aezenfjord"
 
- AVE_fascism:0 "Empire of Avertico"
- AVE_fascism_DEF:0 "the Empire of Avertico"
- AVE_democratic:0 "Avertican Technocratic State"
- AVE_democratic_DEF:0 "the Avertican Technocratic State"
- AVE_neutrality:1 "Kingdom of Avertico"
- AVE_neutrality_DEF:1 "the Kingdom of Avertico"
+ AVE_fascism:0 "Avertican Technocratic State"
+ AVE_fascism_DEF:0 "the Avertican Technocratic State"
+ AVE_democratic:0 "Republic of Avertico"
+ AVE_democratic_DEF:0 "the Republic of Avertico"
+ AVE_neutrality:1 "State of Avertico"
+ AVE_neutrality_DEF:1 "the State of Avertico"
  AVE_communism:0 "Socialist Republic of Avertico"
  AVE_communism_DEF:0 "the Socialist Republic of Avertico"
- AVE_fascism_ADJ:0 "Avertician"
- AVE_democratic_ADJ:0 "Avertician"
- AVE_neutrality_ADJ:0 "Avertician"
- AVE_communism_ADJ:0 "Avertician"
+ AVE_fascism_ADJ:0 "Avertican"
+ AVE_democratic_ADJ:0 "Avertican"
+ AVE_neutrality_ADJ:0 "Avertican"
+ AVE_communism_ADJ:0 "Avertican"
  AVE:0 "Avertico"
  AVE_DEF:0 "Avertico"
  AVE_ADJ:0 "Avertico"
