fixed some strategic region names

--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -110,14 +110,14 @@
  STRATEGICREGION_109:1 "West Sea of Tengala"
  STRATEGICREGION_110:1 "East Savernia"
  STRATEGICREGION_111:0 "Avaria"
- STRATEGICREGION_112:0 "East Regonia"
+ STRATEGICREGION_112:0 "Snoenlands"
  STRATEGICREGION_113:0 "Avertico"
  STRATEGICREGION_114:0 "Southern Escharia"
  STRATEGICREGION_115:0 "Northern Escharia"
  STRATEGICREGION_116:0 "Enosis"
  STRATEGICREGION_117:1 "North Nandor"
  STRATEGICREGION_118:0 "Central Nandor"
- STRATEGICREGION_119:0 "Greater Certaria"
+ STRATEGICREGION_119:0 "Avalisia"
  STRATEGICREGION_120:0 "South Burgamere"
  STRATEGICREGION_121:0 "North Burgamere"
  STRATEGICREGION_122:0 "Vraelea"
