Added NRG, DON,SKJ

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1393,3 +1393,67 @@ FRO_fascism:0 "Imperial Serev-Valdic Union"
  CHA:0 "Chanels"
  CHA_DEF:0 "Chanels"
  CHA_ADJ:0 "Chanels"
+
+ NRG_fascism:0 "Empire of Valreign"
+ NRG_facism_DEF:0 "the Empire of Valreign"
+ NRG_democratic:0 "Republic of Plagadonia"
+ NRG_democratic_DEF:0 "The Republic of Plagadonia"
+ NRG_neurality:1 "Kingdom of Nova-Regna"
+ NRG_neutrality_DEF:1 "the Kingdom of Nova-Regna"
+ NRG_communism:0 "Socialist Union of Nova Regna"
+ NRG_communism_DEF:0 "the Socialist Union of Nova Regna"
+ NRG_fascism_ADJ:0 "Valreigni"
+ NRG_democratic_ADJ:0 "Plagadonian"
+ NRG_neutrality_ADJ:0 "Regnan"
+ NRG_communism_ADJ:0 "Regnan"
+ NRG:0 "Nova-Regna"
+ NRG_DEF:0 "Nova-Regna"
+ NRG_ADJ:0 "Nova-Regna"
+
+ DON_fascism:0 "Empire of Don Fuer"
+ DON_facism_DEF:0 "the Empire of Don Fuer"
+ DON_democratic:0 "Don Fuer"
+ DON_democratic_DEF:0 "Don Fuer"
+ DON_neurality:1 "Tsardom of Don Fuer"
+ DON_neutrality_DEF:1 "the Tsardom of Don Fuer"
+ DON_communism:0 "Don Fuerian Union"
+ DON_communism_DEF:0 "the Don Fuerian Union"
+ DON_fascism_ADJ:0 "Don Fuerian"
+ DON_democratic_ADJ:0 "Don Fuerian"
+ DON_neutrality_ADJ:0 "Don Fuerian"
+ DON_communism_ADJ:0 "Don Fuerian"
+ DON:0 "Don Fuer"
+ DON_DEF:0 "Don Fuer"
+ DON_ADJ:0 "Don Fuer"
+
+ ARL_fascism:0 "Arlin Empire"
+ ARL_facism_DEF:0 "the Arlin Empire"
+ ARL_democratic:0 "Republic of Arlinovla"
+ ARL_democratic_DEF:0 "The Republic of Arlinovla"
+ ARL_neurality:1 "Kingdom of Arlinovla"
+ ARL_neutrality_DEF:1 "the Kingdom of Arlinovla"
+ ARL_communism:0 "Unionist Arlinovla"
+ ARL_communism_DEF:0 "Unionist Arlinovla"
+ ARL_fascism_ADJ:0 "Arlinovlan"
+ ARL_democratic_ADJ:0 "Arlinovlan"
+ ARL_neutrality_ADJ:0 "Arlinovlan"
+ ARL_communism_ADJ:0 "Arlinovlan"
+ ARL:0 "Arlinovla"
+ ARL_DEF:0 "Arlinovla"
+ ARL_ADJ:0 "Arlinovla"
+
+ SKJ_fascism:0 "Valdic Empire of Skjoldrbrodir"
+ SKJ_facism_DEF:0 "the Valdic Empire of Skjoldrbrodir"
+ SKJ_democratic:0 "Republic of Skjoldrbrodir"
+ SKJ_democratic_DEF:0 "The Republic of Skjoldrbrodir"
+ SKJ_neurality:1 "Jarldoms of Skjoldrbrodir"
+ SKJ_neutrality_DEF:1 "the Jarldoms of Skjoldrbrodir"
+ SKJ_communism:0 "Northeners union of Skjoldrbrodir"
+ SKJ_communism_DEF:0 "the Northeners union of Skjoldrbrodir"
+ CHA_fascism_ADJ:0 "Valdic"
+ SKJ_democratic_ADJ:0 "Valdic"
+ SKJ_neutrality_ADJ:0 "Valdic"
+ SKJ_communism_ADJ:0 "Valdic"
+ SKJ:0 "Skjoldrbrodir"
+ SKJ_DEF:0 "Skjoldrbrodir"
+ SKJ_ADJ:0 "Skjoldrbrodir"
