Added custom victory point names & fixed averticos states

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -176,9 +176,9 @@
  STATE_175:1 "Staden"
  STATE_176:0 "Arpton"
  STATE_177:0 "Vantros"
- STATE_178:0 "Odessos"
+ STATE_178:0 "Oldkeep"
  STATE_179:0 "Averti"
- STATE_180:0 "Vallensberg"
+ STATE_180:0 "Aratorayama"
  STATE_181:0 "Cyroen"
  STATE_182:0 "Frostview"
  STATE_183:0 "Cas'Agule"
