--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -10,3 +10,15 @@
  ULD:0 "Uldarash"
  ULD_DEF:0 "Uldarash"
  ULD_ADJ:0 "Uldarashi"
+
+ KOR_fascism:0 "1st Korolian Empire"
+ KOR_fascism_DEF:0 "The First Korolian Empire"
+ KOR_neutrality:0 "Eastern Korolian Czardom"
+ KOR_neutrality_DEF:0 "the Eastern Korolian Czardom"
+ KOR_democratic:0 "Korolian Republic"
+ KOR_democratic_DEF:0 "the Korolian Republic"
+ KOR_communism:0 "Korolian Peoples Union"
+ KOR_communism_DEF:0 "the Korolian Peoples Union"
+ KOR:0 "Korolian"
+ KOR_DEF:0 "Korolian"
+ KOR_ADJ:0 "Korolian"
