--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1450,11 +1450,43 @@
  SKJ_neutrality_DEF:1 "the Jarldoms of Skjoldrbrodir"
  SKJ_communism:0 "Northeners union of Skjoldrbrodir"
  SKJ_communism_DEF:0 "the Northeners union of Skjoldrbrodir"
- CHA_fascism_ADJ:0 "Valdic"
+ SKJ_fascism_ADJ:0 "Valdic"
  SKJ_democratic_ADJ:0 "Valdic"
  SKJ_neutrality_ADJ:0 "Valdic"
  SKJ_communism_ADJ:0 "Valdic"
  SKJ:0 "Skjoldrbrodir"
  SKJ_DEF:0 "Skjoldrbrodir"
  SKJ_ADJ:0 "Skjoldrbrodir"
+ 
+ URC_fascism:0 "Urcastle State"
+ URC_facism_DEF:0 "the Urcastle State"
+ URC_democratic:0 "Urcastle"
+ URC_democratic_DEF:0 "Urcastle"
+ URC_neurality:1 "Kingdom of Urcastle"
+ URC_neutrality_DEF:1 "Kingdom of Urcastle"
+ URC_communism:0 "Union of Urcastle"
+ URC_communism_DEF:0 "the Union of Urcastle"
+ URC_fascism_ADJ:0 "Urcian"
+ URC_democratic_ADJ:0 "Urcian"
+ URC_neutrality_ADJ:0 "Urcian"
+ URC_communism_ADJ:0 "Urcian"
+ URC:0 "Urcastle"
+ URC_DEF:0 "Urcastle"
+ URC_ADJ:0 "Urcastle"
+ 
+ AMB_fascism:0 "Amberian Empire"
+ AMB_facism_DEF:0 "the Amberian Empire"
+ AMB_democratic:0 "Amberia"
+ AMB_democratic_DEF:0 "Amberia"
+ AMB_neurality:1 "Amberiann Kingdom"
+ AMB_neutrality_DEF:1 "Amberian Kingdom"
+ AMB_communism:0 "Amberian union"
+ AMB_communism_DEF:0 "the Amberian union"
+ AMB_fascism_ADJ:0 "Amberian"
+ AMB_democratic_ADJ:0 "Amberian"
+ AMB_neutrality_ADJ:0 "Amberian"
+ AMB_communism_ADJ:0 "Amberian"
+ AMB:0 "Amberia"
+ AMB_DEF:0 "Amberia"
+ AMB_ADJ:0 "Amberia"
  
