Added new provinces and victory points/cities to Zefrania, fixed populations, puppeted Tegridy

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -285,11 +285,11 @@
  STATE_284:0 "Tomgrad"
  STATE_285:0 "Deloria"
  STATE_286:0 "Oxebar"
- STATE_287:0 "Acodon"
+ STATE_287:0 "Acodonia"
  STATE_288:0 "Ecrupto"
  STATE_289:0 "Tegridy Town"
  STATE_290:0 "Yanren"
- STATE_291:0 "Imbuka"
+ STATE_291:0 "Zentraland"
  STATE_292:0 "Ubbercut"
  STATE_293:0 "Noktis"
  STATE_294:0 "Kanule"
@@ -809,3 +809,5 @@
  STATE_807:0 "Daelyria"
  STATE_808:0 "Inner Novia"
  STATE_809:0 "Balmier"
+ STATE_810:0 "Takmandan"
+ STATE_811:0 "Luxor Isles"
