--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -14,3 +14,7 @@
  VICTORY_POINTS_10469:0 "Urcaste"
  VICTORY_POINTS_10586:0 "Overvloed"
  VICTORY_POINTS_824:0 "Port Tittor"
+ VICTORY_POINTS_14767:0 "Blyth Yanren"
+ VICTORY_POINTS_6016:0 "Port Amahle"
+ VICTORY_POINTS_5177:0 "Acodon"
+
