--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -22,3 +22,14 @@
  KOR:0 "Korolian"
  KOR_DEF:0 "Korolian"
  KOR_ADJ:0 "Korolian"
+
+ JOF_fascism:0 "Valdic Empire of Frostmarch"
+ JOF_fascism_DEF:0 "the Valdic Empire of Frostmarch"
+ JOF_democratic:0 "Republic of Frostmarch"
+ JOF_democratic_DEF:0 "the Republic of Frostmarch"
+ JOF_neutrality:0 "Jarldoms of Frostmarch"
+ JOF_neutrality_DEF:0 "the Jarldoms of Frostmarch"
+ JOF_communism:0 "Socialist Republic of Frostmarch"
+ JOF_communism_DEF:0 "the Socialist Republic of Frostmarch"
+ JOF_ADJ:0 "Valdic"
+ JOF_DEF:0 "Frostmarch"
