--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1478,7 +1478,7 @@
  AMB_facism_DEF:0 "the Amberian Empire"
  AMB_democratic:0 "Amberia"
  AMB_democratic_DEF:0 "Amberia"
- AMB_neurality:1 "Amberiann Kingdom"
+ AMB_neutrality:1 "Amberiann Kingdom"
  AMB_neutrality_DEF:1 "Amberian Kingdom"
  AMB_communism:0 "Amberian union"
  AMB_communism_DEF:0 "the Amberian union"
@@ -1490,3 +1490,39 @@
  AMB_DEF:0 "Amberia"
  AMB_ADJ:0 "Amberia"
  
+ NVS_fascism:0 "Norvosi Empire"
+ NVS_fascism_DEF:0 "the Norvosi Empire"
+ NVS_democratic:0 "Republic of Norvos"
+ NVS_democratic_DEF:0 "the Republic of Norvos"
+ NVS_neutrality:0 "Kingdom of Norvos"
+ NVS_neutrality_DEF:0 "the Kingdom of Norvos"
+ NVS_communism:0 "Socialist Republic of Norvos"
+ NVS_communism_DEF:0 "the Socialist Republic of Norvos"
+ NVS_ADJ:0 "Norvosi"
+ NVS_DEF:0 "Norvos"
+
+ ITA_fascism:0 "Italian't Empire"
+ ITA_fascism_DEF:0 "the Italian't Empire"
+ ITA_democratic:0 "Most Serene Republic of Not Venice"
+ ITA_democratic_DEF:0 "the Most Serene Republic of Not Venice"
+ ITA_neutrality:0 "Kingdom of Sourmere-Serenus"
+ ITA_neutrality_DEF:0 "the Kingdom of Sourmere-Serenus"
+ ITA_communism:0 "Socialist Republic of Sourmere-Serenus"
+ ITA_communism_DEF:0 "the Socialist Republic of Sourmere-Serenus"
+ ITA_ADJ:0 "Italian't"
+ ITA_DEF:0 "Serenus"
+ ITA_fascism_ADJ:0 "Italian't"
+ ITA_democratic_ADJ:0 "Venetian't"
+ ITA_neutrality_ADJ:0 "Serenusi"
+ ITA_communism_ADJ:0 "Serenusi"
+
+ ATO_fascism:0 "Atoan Empire"
+ ATO_fascism_DEF:0 "the Atoan Empire"
+ ATO_democratic:0 "Republic of Ato"
+ ATO_democratic_DEF:0 "the Republic of Ato"
+ ATO_neutrality:0 "Kingdom of Ato"
+ ATO_neutrality_DEF:0 "the Kingdom of Ato"
+ ATO_communism:0 "Socialist Republic of Ato"
+ ATO_communism_DEF:0 "the Socialist Republic of Ato"
+ ATO_ADJ:0 "Atoan"
+ ATO_DEF:0 "Ato"
