--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -811,3 +811,5 @@
  STATE_809:0 "Balmier"
  STATE_810:0 "Takmandan"
  STATE_811:0 "Luxor Isles"
+ STATE_812:0 "Port Victoria"
+ STATE_813:0 "Crescada"
