--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -65,4 +65,5 @@ LOADING_TIP_62:0 "I FUCKING HATE ISLAND NATIONS \n- Raptar Di Italian't"
 LOADING_TIP_63:0 "To the Lorent \n Cole is a fucking idiot"
 LOADING_TIP_64:0 "If Johnny Depp played SW he would be a Tortugan \n- Johnny Depp"
 LOADING_TIP_62:0 "This is a fake quote \n- Nero the Plagos Person"
-LOADING_TIP_63:0 'Ass \n Xeo'
+LOADING_TIP_63:0 "Ass \n Xeo"
+LOADING_TIP_64:0 ""
