--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -240,3 +240,6 @@
  STRATEGICREGION_239:0 "West Sea of Pearls"
  STRATEGICREGION_240:0 "Aldan Channel"
  STRATEGICREGION_241:0 "Friholm Bay"
+ STRATEGICREGION_242:0 "North Domeri Sea"
+ STRATEGICREGION_243:0 "Central Domeri Sea"
+ STRATEGICREGION_244:0 "South Domeri Sea"
