--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1526,3 +1526,14 @@
  ATO_communism_DEF:0 "the Socialist Republic of Ato"
  ATO_ADJ:0 "Atoan"
  ATO_DEF:0 "Ato"
+
+ GRE_fascism:0 "Greenlandic Empire"
+ GRE_fascism_DEF:0 "the Greenlandic Empire"
+ GRE_democratic:0 "Republic of Greenland"
+ GRE_democratic_DEF:0 "the Republic of Greenland"
+ GRE_neutrality:0 "Kingdom of Greenland"
+ GRE_neutrality_DEF:0 "the Kingdom of Greenland"
+ GRE_communism:0 "Socialist Republic of Greenland"
+ GRE_communism_DEF:0 "the Socialist Republic of Greenland"
+ GRE_ADJ:0 "Greenlandic"
+ GRE_DEF:0 "Greenland"
