--- a/localisation/english/hor_decisions_l_english.yml
+++ b/localisation/english/hor_decisions_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
  form_empire_of_uldarash_category:0 "Restore The Empire!"
- form_empire_of_uldarash_category_desc:0 "For the benefit of Haven!"
+ form_empire_of_uldarash_category_desc:0 "For the benefit of Haven! The Empire will rise again, Imur Uldarash"
  form_empire_of_uldarash:0 "Form Uldarash" 
  form_empire_of_uldarash_desc:0 "The once great empire will rise once again!"
