--- a/localisation/english/HoR_advisors_l_english.yml
+++ b/localisation/english/HoR_advisors_l_english.yml
@@ -11,3 +11,5 @@
  AVD_mao_melli:0 "Mao Melli"
  AVD_nori_di_nekomar:0 "Nori di Nekomar"
  AVD_orwa_sinawis:0 "Orwa Sinawis"
+ AVD_pyrrah_Lelya_earcala:0 "Pyrrah Lelya-Earcala"
+ AVD_lanfan_lelya_earcala:0 "Lanfan Lelya-Earcala"
