--- a/localisation/english/HoR_country_leaders_l_english.yml
+++ b/localisation/english/HoR_country_leaders_l_english.yml
@@ -5,3 +5,13 @@
 
  # Aurlunor
  AVD_sareariel_lelya_earcala:0 "Sareariel Lelya-Earcala"
+
+ # Tortuga
+ TOR_ulifer:0 "Pirate Lord Ulifer"
+
+ # Carn 
+ CAR_shareleria_elernel_levia:0 "Shæreleria Elernel-Leviæ"
+ CAR_kerplis_everthorne_elernel:0 "Kerplis Everthorne Elernel"
+ CAR_daria_elernel_daria:0 "Daria Elernel-Dariæ"
+ CAR_derius_of_gellifrey:0 "Derius of Gellifrey"
+ 
