--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -23,6 +23,42 @@
  KOR_DEF:0 "Korolian"
  KOR_ADJ:0 "Korolian"
 
+ ARE_fascism:0 "Second Aurlûnoren-Ryzani Empire"
+ ARE_fascism_DEF:0 "The Second Aurlûnoren-Ryzani Empire"
+ ARE_neutrality:0 "Second Aurlûnoren-Ryzani Empire"
+ ARE_neutrality_DEF:0 "the Second Aurlûnoren-Ryzani Empire"
+ ARE_democratic:0 "Federation of Aurlûnor-Ryzan"
+ ARE_democratic_DEF:0 "the Federation of Aurlûnor-Ryzan"
+ ARE_communism:0 "Union of Aurlûnor-Ryzan"
+ ARE_communism_DEF:0 "the Union of Aurlûnor-Ryzan"
+ ARE:0 "Aurlûnor-Ryzan"
+ ARE_DEF:0 "Aurlûnor-Ryzan"
+ ARE_ADJ:0 "Aurlûnoren-Ryzani"
+
+ SOU_fascism:0 "Imperial Oceanic Empire of Soumere"
+ SOU_fascism_DEF:0 "The Imperial Oceanic Empire of Soumere"
+ SOU_neutrality:0 "Maritime Kingdom of Soumere"
+ SOU_neutrality_DEF:0 "the Maritime Kingdom of Soumere"
+ SOU_democratic:0 "Republic of Soumere"
+ SOU_democratic_DEF:0 "the Republic of Soumere"
+ SOU_communism:0 "Southern Union of Soumere"
+ SOU_communism_DEF:0 "the Southern Union of Soumere"
+ SOU:0 "Soumere"
+ SOU_DEF:0 "Soumere"
+ SOU_ADJ:0 "Soumerish"
+
+ AVR_fascism:0 "2nd Empire of Aldovir"
+ AVR_fascism_DEF:0 "the 2nd Empire of Aldovir"
+ AVR_neutrality:0 "2nd Empire of Aldovir"
+ AVR_neutrality_DEF:0 "the 2nd Empire of Aldovir"
+ AVR_democratic:0 "Imperial Republic of Aldovir"
+ AVR_democratic_DEF:0 "the Imperial Republic of Aldovir"
+ AVR_communism:0 "Union of Aldovir"
+ AVR_communism_DEF:0 "the Union of Aldovir"
+ AVR:0 "Aldovir"
+ AVR_DEF:0 "Aldovir"
+ AVR_ADJ:0 "Aldovir"
+
  JOF_fascism:0 "Valdic Empire of Frostmarch"
  JOF_fascism_DEF:0 "the Valdic Empire of Frostmarch"
  JOF_democratic:0 "Republic of Frostmarch"
