added Sint_Blauw nation
Credits to Pixel Fencer they made 99.9% of it.

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1642,3 +1642,19 @@ DEN_ADJ:0 "Denthros"
  ASH:0 "Dominion"
  ASH_DEF:0 "Ashuran"
  ASH_ADJ:0 "Ashuran"
+
+ PAU_fascism:0 "Empire of the rising Swan"
+ PAU_fascism_DEF:0 "the Empire of the rising Swan"
+ PAU_democratic:0 "Republic of Sint Blauw"
+ PAU_democratic_DEF:0 "the Republic of Sint Blauw"
+ PAU_neutrality:1 "Posavertican Union"
+ PAU_neutrality_DEF:1 " the Posavertican Union"
+ PAU_communism:0 "People's Union of Posavertico"
+ PAU_communism_DEF:0 "the People's Union of Posavertico"
+ PAU_fascism_ADJ:0 "Unionist"
+ PAU_democratic_ADJ:0 "Blauwist"
+ PAU_neutrality_ADJ:0 "Unionist"
+ PAU_communism_ADJ:0 "People's Unionist"
+ PAU:0 "Dominion"
+ PAU_DEF:0 "Posavertican"
+ PAU_ADJ:0 "Posavertico"
