--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -813,4 +813,6 @@
  STATE_811:0 "Luxor Isles"
  STATE_812:0 "Port Victoria"
  STATE_813:0 "Crescada"
-
+ STATE_814:0 "Quandale Dingle HQ"
+ STATE_815:0 "Sint Blauw"
+ 
