--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -17,4 +17,7 @@
  VICTORY_POINTS_14767:0 "Blyth Yanren"
  VICTORY_POINTS_6016:0 "Port Amahle"
  VICTORY_POINTS_5177:0 "Acodon"
+ VICTORY_POINTS_4679:0 "Averti-Avolius"
+ VICTORY_POINTS_15806:0 "Vallensburg"
+ VICTORY_POINTS_8356:0 "Odessos"
 
