--- a/localisation/english/HoR_Traits_l_english.yml
+++ b/localisation/english/HoR_Traits_l_english.yml
@@ -1,3 +1,7 @@
 ﻿l_english:
  work_of_the_people: "The Work of the People"
  blessed_daughter_of_sen: "Blessed Daughter of Sen and guided by the will of the Vale to guard Celeia, Sareariel Lelya-Earcala, Celestial Matron of Celeia, Velereth of the Aurlûnor Velande, Unifier of Almador, Queen of Kings, Blade of the Dragons"
+ cultural_hero: "Cultural Hero"
+ lady_of_the_people: "Lady of the People"
+ ancient_caeron: "Ancient Caeron"
+ disloyal_governor: "Disloyal Governor"
