--- a/localisation/english/HoR_focus_l_english copy.yml
+++ b/localisation/english/HoR_focus_l_english copy.yml
@@ -1,2 +1,98 @@
 ﻿l_english:
  AVE_technocratic_anniversary_twomonths_fct:0 "Anniversary of Vallenist Reign"
+
+ ## Carn
+ # Industrial Section
+ CAR_carnian_revival:0 "Carnian Revival"
+ CAR_new_possibilities:0 "New Possibilities"
+ CAR_invest_in_the_north:0 "Invest in the North"
+ CAR_industrial_heartlands:0 "Industrial Heartlands"
+ CAR_imperial_capital:0 "Imperial Capital"
+ CAR_carnian_renaissance:0 "Carnian Renaissance"
+ CAR_aegmerist_revivial:0 "Aegmerist Revivial"
+ CAR_lestrian_university:0 "Lestrian University"
+ #Political Section
+ CAR_struggle_for_power:0 "Struggle for Power"
+ # Democratic Section
+ CAR_liberal_ideas:0 "Liberal Ideas"
+ CAR_limiting_caeroneal_authority:0 "Limiting Caeroneal Authority"
+ CAR_shaeroneal_council:0 "Shaeroneal Council"
+ CAR_lestrian_forum:0 "Lestrian Forum"
+ CAR_repopulate_morvanne:0 "Repopulate Morvanne"
+ CAR_synneian_militias:0 "Synneian Millitias"
+ CAR_hold_a_grand_gathering:0 "Hold a Grand Gathering"
+ CAR_bound_by_law:0 "Bound by Law"
+ CAR_mediator_in_aldovir:0 "Mediator in Aldovir"
+ CAR_aid_asitir_settlers:0 "Aid Asitir Settlers"
+ CAR_lirgal_carn:0 "Lirgal-Carn"
+ CAR_legalize_sakrelism:0 "Legalize Sakrelism"
+ CAR_sironia_carn:0 "Sironia-Carn"
+ CAR_rhodia_is_carn:0 "Rhodia is Carn"
+ CAR_demand_rhodia:0 "Demand Rhodia"
+ CAR_taloran_question:0 "Táloran Question"
+ CAR_third_treaty_of_roscella:0 "Third Treaty of Roscella"
+ CAR_blue_flower_cult:0 "Blue Flower Cult"
+ CAR_compromise_with_yazov:0 "Compromise with Yazov"
+ CAR_fight_for_our_unity:0 "Fight For Our Unity"
+ # Monarchy Section 
+ CAR_compromise_with_the_liberals:0 "Compromise with the Liberals"
+ CAR_protect_the_caeron_at_all_costs:0 "Protect to Caeron at all Costs"
+ CAR_apease_the_masses:0 "Appease the Masses"
+ CAR_increase_feudal_power:0 "Increase Feudal Power"
+ CAR_prepare_for_civil_war:0 "Prepare for Civil War"
+ CAR_peace_by_force:0 "Peace by Force"
+ CAR_reintegrating_the_borderlands:0 "Reintergrating the Borderlands"
+ CAR_rig_the_grand_gathering:0 "Rig the Grand Gathering"
+ CAR_queen_of_blood_and_iron:0 "Queen of Blood and Iron"
+ CAR_elernel_hegemony:0 "Elernel Hegemony"
+ CAR_rightful_carnian_lands:0 "Rightful Carnian Lands"
+ CAR_dealing_with_the_sakrelist:0 "Dealing with the Sakrelists"
+ CAR_liberating_asitir_lands:0 "Liberating Asitir Lands"
+ CAR_lestrian_expansion:0 "Lestrian Expansion"
+ CAR_coenia_aeternee_cind:0 "Coenia Aeternée cind"
+
+ CAR_the_eternal_caeron:0 "The Eternal Caeron"
+ CAR_ultimate_merit:0 "Ultimate Merit"
+ # Extermist Section
+ CAR_resort_to_extremism:0 "Resort to Extremism"
+ # Imperialism Section
+ CAR_let_daria_return_from_exile:0 "Let Daria Return from Exile"
+ CAR_nationalist_support:0 "Nationalist Support"
+ CAR_converting_the_liberals:0 "Converting the Liberals"
+ CAR_prepare_for_civil_war_2:0 "Prepare for Civil War"
+ CAR_daria_drae_tolle:0 "Daria Dræ Trolle"
+ CAR_aid_from_yazov:0 "Aid from Yazov"
+ CAR_ask_for_rhodia:0 "Ask for Rhodia"
+ CAR_ask_for_talor:0 "Ask for Tálor"
+ CAR_aegmerist_exaltation:0 "Aegmerist Exaltation"
+ CAR_destroy_the_sakrelists:0 "Destroy the Sakrelists"
+ CAR_cleanse_the_asitir_in_carn:0 "Cleanse the Asitir in Carn"
+ CAR_dominate_aldovir:0 "Dominate Aldovir"
+ CAR_manipulate_the_grand_gathering:0 "Manipulate the Grand Gathering"
+ CAR_deify_the_elernels:0 "Deify the Elernels"
+ # Commie Section
+ CAR_appoint_derius_as_steward:0 "Appoint Derius as Steward"
+ CAR_planned_economy:0 "Planned Economy"
+ CAR_confiscate_elernel_properties:0 "Confiscate Elernel Properties"
+ CAR_dismiss_the_shaerons:0 "Dismiss the Shaerons"
+ CAR_negotiate_with_the_rebels:0 "Negotiate with the Rebels"
+ CAR_reform_the_league_of_free_lords:0 "Reform the League of Free Lords"
+ CAR_abolish_the_grand_gathering:0 "Abolished the Grand Gathering"
+ CAR_alliance_with_caeron_peter:0 "Alliance with Caeron Peter"
+ CAR_free_the_rhodians:0 "Free the Rhodians"
+ CAR_invite_sironia_into_the_league:0 "Invite Sironia into the League"
+ CAR_invite_the_audalads_into_the_league:0 "Invite the Audalads into the League"
+ CAR_freedom_for_all:0 "Freedom for All"
+ # Army section
+ CAR_morvannian_elites:0 "Morvannian Elites"
+ CAR_powerful_infantry:0 "Powerful Infantry"
+ CAR_heavy_units:0 "Heavy Units"
+ CAR_clean_skies:0 "Clean Skies"
+ CAR_defending_our_waters:0 "Defending Our Waters"
+ CAR_lestrian_shipyards:0 "Lestrian Shipyards"
+ CAR_reform_the_erneraevis:0 "Reform the Ernerævis"
+ CAR_stalwart_defense:0 "Stalwart Defense"
+ CAR_the_northern_line:0 "The Northern Line"
+ CAR_powerful_offense:0 "Powerful Offense"
+ CAR_heavy_assault:0 "Heavy Assault"
+ 
