--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -69,3 +69,53 @@
  JOF_communism_DEF:0 "the Socialist Republic of Frostmarch"
  JOF_ADJ:0 "Valdic"
  JOF_DEF:0 "Frostmarch"
+
+ LIRGAL_CARN_fascism:0 "Empire of Lirgal-Carn"
+ LIRGAL_CARN_fascism_DEF:0 "the Empire of Lirgal-Carn"
+ LIRGAL_CARN_democratic:0 "Diarchy of Lirgal-Carn"
+ LIRGAL_CARN_democratic_DEF:0 "the Diarchy of Lirgal-Carn"
+ LIRGAL_CARN_neutrality:0 "Diarchy of Lirgal-Carn"
+ LIRGAL_CARN_neutrality_DEF:0 "the Diarchy of Lirgal-Carn"
+ LIRGAL_CARN_communism:0 "Socialist Republic of Lirgal-Carn"
+ LIRGAL_CARN_communism_DEF:0 "the Socialist Republic of Lirgal-Carn"
+ LIRGAL_CARN_ADJ:0 "Lirgal-Carnian"
+ LIRGAL_CARN_DEF:0 "Lirgal-Carn"
+
+ SIRONIA_CARN_fascism:0 "Empire of Sironia-Carn"
+ SIRONIA_CARN_fascism_DEF:0 "the Empire of Sironia-Carn"
+ SIRONIA_CARN_democratic:0 "Diarchy of Sironia-Carn"
+ SIRONIA_CARN_democratic_DEF:0 "the Diarchy of Sironia-Carn"
+ SIRONIA_CARN_neutrality:0 "Diarchy of Sironia-Carn"
+ SIRONIA_CARN_neutrality_DEF:0 "the Diarchy of Sironia-Carn"
+ SIRONIA_CARN_communism:0 "Socialist Republic of Sironia-Carn"
+ SIRONIA_CARN_communism_DEF:0 "the Socialist Republic of Sironia-Carn"
+ SIRONIA_CARN_ADJ:0 "Sironia-Carnian"
+ SIRONIA_CARN_DEF:0 "Sironia-Carn"
+
+ LARDBURGIA_fascism:0 "Lardburgian Empire"
+ LARDBURGIA_fascism_DEF:0 "the Lardburgian Empire"
+ LARDBURGIA_democratic:0 "Lardburgian Republic"
+ LARDBURGIA_democratic_DEF:0 "the Lardburgian Republic"
+ LARDBURGIA_neutrality:0 "Lardburgian Empire"
+ LARDBURGIA_neutrality_DEF:0 "the Lardburgian Empire"
+ LARDBURGIA_communism:0 "Socialist Republic of Lardburgia"
+ LARDBURGIA_communism_DEF:0 "the Socialist Republic of Lardburgia"
+ LARDBURGIA_ADJ:0 "Lardburgian"
+ LARDBURGIA_DEF:0 "Lardburgia"
+
+ Elernel_Empire_fascism:0 "Elernel Empire"
+ Elernel_Empire_fascism_DEF:0 "the Elernel Empire" 
+ Elernel_Empire_democratic:0 "Elernel Republic" 
+ Elernel_Empire_democratic_DEF:0 "the Elernel Republic" 
+ Elernel_Empire_neutrality:0 "Elernel Empire" 
+ Elernel_Empire_neutrality_DEF:0 "the Elernel Empire"
+ Elernel_Empire_communism:0 "Elernel Socialist Republic"
+ Elernel_Empire_communism_DEF:0 "the Elernel Socialist Republic" 
+ Elernel_Empire_ADJ:0 "Subject of Elernel"
+ Elernel_Empire_DEF:0 "Elernel"
+
+
+ LEAGUE_OF_FREE_LORDS_communism:0 "League of Free Lords"
+ LEAGUE_OF_FREE_LORDS_communism_DEF:0 "the League of Free Lords" 
+ LEAGUE_OF_FREE_LORDS_ADJ:0 "Carnian"
+ LEAGUE_OF_FREE_LORDS_DEF:0 "League of Free Lords"
