--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -560,21 +560,22 @@
  ADA_DEF:0 "Adashira"
  ADA_ADJ:0 "Adashira"
 
- SIR_fascism:0 "Empire of Sironia"
- SIR_fascism_DEF:0 "the Empire of Sironia"
- SIR_democratic:0 "Republic of Sironia"
- SIR_democratic_DEF:0 "the Republic of Sironia"
- SIR_neutrality:1 "3rd Kingdom of Sironia"
- SIR_neutrality_DEF:1 "the 3rd Kingdom of Sironia"
- SIR_communism:0 "Socialist Republic of Sironia"
- SIR_communism_DEF:0 "the Socialist Republic of Sironia"
- SIR_fascism_ADJ:0 "Sironian"
- SIR_democratic_ADJ:0 "Sironian"
- SIR_neutrality_ADJ:0 "Sironian"
- SIR_communism_ADJ:0 "Sironian"
- SIR:0 "Sironia"
- SIR_DEF:0 "Sironia"
- SIR_ADJ:0 "Sironia"
+SIR_fascism:0 "Thelis Sironvir"
+SIR_fascism_DEF:0 "the Thelis Sironvir"
+SIR_democratic:0 "Archonate of Sironia"
+SIR_democratic_DEF:0 "the Archonate of Sironia"
+SIR_neutrality:1 "3rd Kingdom of Sironia"
+SIR_neutrality_DEF:1 "the Third Kingdom of Sironia"
+SIR_communism:0 "State of Sakralith"
+SIR_communism_DEF:0 "the State of Sakralith"
+SIR_fascism_ADJ:0 "Sironviri"
+SIR_democratic_ADJ:0 "Sironian"
+SIR_neutrality_ADJ:0 "Sironian"
+SIR_communism_ADJ:0 "Sakralist"
+SIR:0 "Sironia"
+SIR_DEF:0 "Sironia"
+SIR_ADJ:0 "Sironia" 
+
 
  CAR_fascism:0 "Empire of Carn"
  CAR_fascism_DEF:0 "the Empire of Carn"
