--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -68,3 +68,4 @@ LOADING_TIP_62:0 "This is a fake quote \n- Nero the Plagos Person"
 LOADING_TIP_63:0 "Ass \n Xeo"
 LOADING_TIP_64:0 "The people are stupid \n- Jamesspyro, Cihuacoatl of Huitca"
 LOADING_TIP_65:0 "Fuck Beijing \n- Coffeeccubus"
+LOADING_TIP_67:0 "Tiered of Stoneworks? Try Terra Tales Instead!" - Totaly not an advertisment
