--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -259,8 +259,8 @@
  STATE_258:0 "Marepago"
  STATE_259:0 "Arlin"
  STATE_260:0 "Arlin Plain"
- STATE_261:0 "Central Plagos Plain"
- STATE_262:0 "Central Plagos Desert"
+ STATE_261:0 "Northern Arlin Plain"
+ STATE_262:0 "Saboten Desert"
  STATE_263:0 "Andoros"
  STATE_264:0 "Novia"
  STATE_265:0 "Remenberg area"
@@ -823,3 +823,5 @@
  STATE_821:0 "STATE_821"
  STATE_822:0 "Voklahoma"
  STATE_823:0 "Sorrenburg"
+ STATE_824:0 "Outer Tengaesal"
+ STATE_825:0 "Veldion mountains"
