--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -20,4 +20,5 @@
  VICTORY_POINTS_4679:0 "Averti-Avolius"
  VICTORY_POINTS_15806:0 "Vallensburg"
  VICTORY_POINTS_8356:0 "Odessos"
+ VICTORY_POINTS_9209:0 "Remenberg"
 
