Added flags for Chumon ito

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -708,17 +708,17 @@ DEN_ADJ:0 "Denthros"
 
  CHU_fascism:0 "Chumon Ito"
  CHU_fascism_DEF:0 "the Chumon Ito State"
- CHU_democratic:0 "Republic Of Veldion"
- CHU_democratic_DEF:0 "the Veldion Republic"
- CHU_neutrality:1 "Kingdom Of Polskon"
- CHU_neutrality_DEF:1 "Kingdom Of Polskon"
+ CHU_democratic:0 "Kingdom of Polskon"
+ CHU_democratic_DEF:0 "the Kingdom of Polskon"
+ CHU_neutrality:1 "Kingdom Of Asarakaen"
+ CHU_neutrality_DEF:1 "Kingdom Of Asarakaen"
  CHU_communism:0 "United Socialist Worker-Provinces of Plagatea"
  CHU_communism_DEF:0 "the United Socialist Worker-Provinces of Plagatea"
  CHU_fascism_ADJ:0 "Plagatean"
- CHU_democratic_ADJ:0 "Veldski"
- CHU_neutrality_ADJ:0 "Veldski"
+ CHU_democratic_ADJ:0 "Plagatean"
+ CHU_neutrality_ADJ:0 "Plagatean"
  CHU_communism_ADJ:0 "Plagatean"
- CHU:0 "Goshuma"
+ CHU:0 "Chumon Ito"
  CHU_DEF:0 "Chumon Ito"
  CHU_ADJ:0 "Chumon Ito" 
  CHU_ADJ:0 "Chumon Ito" 
@@ -985,8 +985,8 @@ DEN_ADJ:0 "Denthros"
  NAJ_democratic_DEF:0 "the United United Provinces of Najer"
  NAJ_neutrality:1 "Emirate Of Najer"
  NAJ_neutrality_DEF:1 "The Emirate Of Najer"
- NAJ_communism:0 "Socialist Republic of Najer"
- NAJ_communism_DEF:0 "Socialist Republic of Najer"
+ NAJ_communism:0 "Socialist Peoples Provinces of Najer"
+ NAJ_communism_DEF:0 "Socialist Peoples Provinces of Najer"
  NAJ_fascism_ADJ:0 "Najeri"
  NAJ_democratic_ADJ:0 "Najeri"
  NAJ_neutrality_ADJ:0 "Najeri"
@@ -1691,3 +1691,20 @@ DEN_ADJ:0 "Denthros"
  AET:0 "Aetheria"
  AET_DEF:0 "Aetheria"
  AET_ADJ:0 "Aetheria"
+
+ VLD_fascism:0 "Veldski Front"
+ VLD_fascism_DEF:0 "The Veldski Front"
+ VLD_democratic:0 "Republic Of Veldion"
+ VLD_democratic_DEF:0 "the Republic of veldion "
+ VLD_neutrality:1 "Kingdom Of Polskon"
+ VLD_neutrality_DEF:1 "Kingdom Of Polskon"
+ VLD_communism:0 "Social state of Red Veldion"
+ VLD_communism_DEF:0 "The Social state of Red Veldion"
+ VLD_fascism_ADJ:0 "Veldski"
+ VLD_democratic_ADJ:0 "Veldski"
+ VLD_neutrality_ADJ:0 "Veldski"
+ VLD_communism_ADJ:0 "Veldski"
+ VLD:0 "Veldion"
+ VLD_DEF:0 "Veldion"
+ VLD_ADJ:0 "Veldion" 
+ VLD_ADJ:0 "Veldion" 
