--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -23,3 +23,22 @@
  PAU_neutrality_party:0 "The Pen Dynasty"
  PAU_neutrality_party_long:0 "The Pen Dynasty"
  PAU_monarchism_desc:0 "The Pen Dynasty is the legitamite Royal Family of Avertico. The Founder of Avertico, Blueford Pen being the reasoning for it being the legitimate Royal Family. The Heir to the throne Ruby Pen is determined to take back Avertico once she is in power, getting rid of the sick man who kicked them out and his obsessions with technology. "
+ #Czervoslavia
+ CZR_fascism_party:0 "KNF"
+ CZR_fascism_party_long:0 "Korolian National Front"
+ CZR_fascism_desc:0 "The Korolian National Front serves to unite all korolian people within a realm"
+ CZR_democratic_party:0 "CDP"
+ CZR_democratic_party_long:0 "Czervoslavian Democratic party"
+ CZR_neutrality_party:0 "HK"
+ CZR_neutrality_party_long:0 "House Korol"
+ CZR_communism_party:0 "CPP"
+ CZR_communism_party_long:0 "Czervoslavian Peoples Party"
+ #Chumon Ito
+ CHU_fascism_party:0 "SPLF"
+ CHU_fascism_party_long:0 "The Southern Plagatean Liberation Front"
+ CHU_democratic_party:0 "CDP"
+ CHU_democratic_party_long:0 "Republican Veldski Party"
+ CHU_neutrality_party:0 "PRF"
+ CHU_neutrality_party_long:0 "Polskon Restorationist Front"
+ CHU_communism_party:0 "UPPW"
+ CHU_communism_party_long:0 "United Provinces of Plagatean Workers"
